# diffbox

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.runpod  Dockerfile.serverless  Makefile  README.md  go.mod  go.sum  healthcheck.sh  runpod-template.json  runpod_handler.py  supervisord.conf
.github/workflows/: build.yml
cmd/server/: main.go
docs/: architecture.md  handover.md  runpod-deployment.md  serverless-deployment.md
docs/plans/: 2026-01-05-i2v-qwen-cicd-design.md  2026-01-05-i2v-qwen-cicd-implementation.md  2026-01-06-reliability-improvements-design.md  2026-01-06-reliability-improvements-implementation.md
internal/api/: config_handlers.go  jobs.go  models.go  router.go  websocket.go  workflows.go
internal/aria2/: client.go  client_test.go
internal/config/: config.go
internal/db/: db.go  db_test.go
internal/models/: download.go  download_test.go
internal/queue/: queue.go
internal/worker/: manager.go  manager_test.go
python/: pyproject.toml
python/tests/: test_protocol.py
python/worker/: __init__.py  __main__.py  chat.py  comfyui_client.py  comfyui_templates.py  i2v.py  protocol.py  qwen.py  svi.py
python/worker/comfyui_workflows/: i2v.json  qwen.json
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: workflows.ts
web/src/components/: ChatForm.tsx  I2VForm.tsx  ImageUpload.tsx  OutputGallery.tsx  Progress.tsx  QwenForm.tsx
web/src/components/layout/: Layout.tsx
web/src/hooks/: useWebSocket.ts
web/src/lib/: utils.ts
web/src/pages/: ModelsPage.tsx  SettingsPage.tsx  WorkflowPage.tsx
web/src/stores/: jobStore.ts
