[project]
name = "diffbox-worker"
version = "0.1.0"
description = "Python inference worker for diffbox"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch>=2.5.0",
    "torchvision",
    "torchaudio",
    "transformers>=4.46.0",
    "accelerate",
    "safetensors",
    "einops",
    "imageio[ffmpeg]",
    "pillow",
    "numpy",
    "peft>=0.17.0",
    "sentencepiece",
    "protobuf",
    "huggingface-hub",
    "modelscope",
    # "diffsynth",  # Removed: Migrating to ComfyUI backend
    "vllm>=0.6.0",
    # ComfyUI integration
    "aiohttp>=3.9.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.ruff]
exclude = []

[tool.black]
exclude = ""
